Fix: `InboxContainer` footer vertical height cutoff

--- a/src/modules/users/components/Inbox/InboxContainer/InboxContainer.css
+++ b/src/modules/users/components/Inbox/InboxContainer/InboxContainer.css
@@ -24,7 +24,6 @@
 .contentContainerPopup {
   display: flex;
   flex-direction: column;
-  max-height: 446px;
   width: 480px;
 }
 
